# nervos-force-bridge

./: .gitignore  ChangeLog.md  README.md  ckb-shell.nix  default.nix  release.nix
.obelisk/impl/: default.nix  github.json
backend/: backend.cabal
backend/src/: ADA.hs  Backend.hs  Bridge.hs  CKB.hs
backend/src/ADA/: Types.hs
backend/src/ADA/Contracts/Contract/: Bridge.hs
backend/src/Backend/: Utils.hs
backend/src/Bridge/: Cardano.hs  Nervos.hs  Utils.hs
backend/src/Bridge/Cardano/: Blockfrost.hs  Types.hs
backend/src/Bridge/Nervos/: Cli.hs  Indexer.hs  RPC.hs  SUDT.hs  Types.hs
backend/src/CKB/: Capsule.hs  Config.hs  RPC.hs  Types.hs  Utils.hs
cardano-overlays/: default.nix  ghcjs.nix
cardano-overlays/cardano-packages/: default.nix
cardano-overlays/cardano-packages/dep/cardano-addresses/: github.json
cardano-overlays/cardano-packages/dep/cardano-base/: github.json
cardano-overlays/cardano-packages/dep/cardano-ledger/: github.json
cardano-overlays/cardano-packages/dep/cardano-node/: github.json
cardano-overlays/cardano-packages/dep/cardano-wallet/: github.json
cardano-overlays/cardano-packages/dep/hedgehog-extras/: github.json
cardano-overlays/cardano-packages/dep/iohk-monitoring-framework/: github.json
cardano-overlays/cardano-packages/dep/openapi3/: github.json
cardano-overlays/cardano-packages/dep/ouroboros-network/: github.json
cardano-overlays/cardano-packages/dep/plutus/: github.json
cardano-overlays/cardano-packages/dep/plutus-apps/: github.json
common/: common.cabal
common/src/Common/: Bridge.hs  Cardano.hs  Nervos.hs  Route.hs
frontend/: frontend.cabal
frontend/src/: Cardano.hs  Frontend.hs  Nami.hs  Nervos.hs  Promise.hs
my-sudt/: README.md  capsule.toml  deployment.toml
my-sudt/contracts/my-sudt/: Cargo.toml
my-sudt/contracts/my-sudt/src/: main.rs
my-sudt/tests/src/: tests.rs
static/: default.nix
static/src/: node-packages.nix  package.json  tailwind.config.js  webpack.config.js
static/src/src/: main.js
