name: backend
version: 0.1
cabal-version: >= 1.8
build-type: Simple

library
  hs-source-dirs: src
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , common
               , frontend
               , obelisk-backend
               , obelisk-route
               , which
               , logging-effect
               , prettyprinter
               , process
               , binary
               , directory
               , attoparsec
               , temporary
               , tomland
               , text
               , obelisk-executable-config-lookup
               , web3
               , web3-jsonrpc
               , web3-provider
               , wai
               , warp
               , cardano-binary
               , basement
               , servant
               , servant-server
               , servant-client
               , bytestring
               , aeson
               , lens-aeson
               , wreq
               , http-client
               , http-client-tls
               , hexstring
               , containers
               , lens
                                          
  exposed-modules:
    Backend
  other-modules:
    Backend.Utils
    Bridge
    Bridge.Cardano
    Bridge.Cardano.Blockfrost
    Bridge.Cardano.Types
    Bridge.Nervos
    Bridge.Nervos.Cli
    Bridge.Nervos.Indexer
    Bridge.Nervos.RPC
    Bridge.Nervos.SUDT
    Bridge.Nervos.Types
    Bridge.Utils
    CKB
    CKB.Capsule 
    CKB.Config
    CKB.RPC
    CKB.Types
    CKB.Utils

  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits

executable backend
  main-is: main.hs
  hs-source-dirs: src-bin
  ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -threaded -fno-show-valid-hole-fits
  if impl(ghcjs)
    buildable: False
  build-depends: base
               , backend
               , common
               , frontend
               , obelisk-backend
