[package]
name = "my-sudt"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.4.1"

[profile.dev]
panic = 'abort'
[profile.release]
overflow-checks = true
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
